added functionality for cluster execution

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,25 @@
+process {
+    executor='lsf'
+    queue='production-scmap_workflow'
+    clusterOptions = '-R \"select[hname!=\'hx-noah-05-02\']\"'
+}
+
+executor {
+    queueSize=1000
+    perJobMemLimit=true
+    exitReadTimeout='100000 sec'
+    pollInterval = '5sec'
+}
+
+conda {
+    cacheDir = "`pwd`/envs"
+    createTimeout = "30 min"
+}
+
 params {
     
     output_dir = "$baseDir/data/output"
-    projection_method = "cell" //must be 'cell' or 'cluster'
+    projection_method = "cluster" //must be 'cell' or 'cluster'
 
     query_exp_mat = "$baseDir/data/query_10X/"
     //query_sce = "$baseDir/data/projected_sce.rds"
