--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ executor {
 }
 
 conda {
-    cacheDir = "`pwd`/envs"
+    cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs" //change this 
     createTimeout = "30 min"
 }
 
