modify queue parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 process {
     executor='lsf'
-    queue='production-scmap_workflow'
+    queue='production-rh74'
     clusterOptions = '-R \"select[hname!=\'hx-noah-05-02\']\"'
 }
 
@@ -12,7 +12,7 @@ executor {
 }
 
 conda {
-    cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs" //change this 
+    cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs" //change this later 
     createTimeout = "30 min"
 }
 
