add config profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,19 +1,22 @@
-process {
-    executor='lsf'
-    queue='production-rh74'
-    clusterOptions = '-R \"select[hname!=\'hx-noah-05-02\']\"'
-}
+profiles {
 
-executor {
-    queueSize=1000
-    perJobMemLimit=true
-    exitReadTimeout='100000 sec'
-    pollInterval = '5sec'
-}
+    standard {
+        process.executor = 'local'
+    }
 
-conda {
-    cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs" //change this later 
-    createTimeout = "30 min"
+    cluster{
+        process.executor='lsf'
+        process.queue='production-rh74'
+        process.clusterOptions = '-R \"select[hname!=\'hx-noah-05-02\']\"'
+
+        executor.queueSize=1000
+        executor.perJobMemLimit=true
+        executor.exitReadTimeout='100000 sec'
+        executor.pollInterval = '5sec'
+
+        conda.cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs" //change this later 
+        conda.createTimeout = "30 min"
+    } 
 }
 
 params {
