data extraction steps

--- a/envs/dropletutils.yaml
+++ b/envs/dropletutils.yaml
@@ -1,9 +1,10 @@
 name: dropletutils
 channels:
   - bioconda
-  - conda-forge 
-  - defaults 
+  - conda-forge
+  - defaults
 dependencies:
-  - openblas 
+  - openblas
   - dropletutils-scripts=0.0.4
+  - bioconductor-singlecellexperiment=1.6.0
   
