--- a/nextflow.config
+++ b/nextflow.config
@@ -20,24 +20,38 @@ profiles {
 }
 
 params {
-    
     output_dir = "$baseDir/data/output"
-    projection_method = "cluster" //must be 'cell' or 'cluster'
+    projection_method = "cell" //must be 'cell' or 'cluster'
 
-    query_exp_mat = "$baseDir/data/query_10X/"
+    // query parameters 
+    query_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx"
+
+    query_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_cols"
+
+    query_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_rows"
+
+    query_raw_data = "$baseDir/data/query_raw_data/"
     //query_sce = "$baseDir/data/projected_sce.rds"
+    
+
+    // reference parameters
+    reference_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx"
+
+    reference_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_cols"
+
+    reference_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_rows" 
+
+    reference_metadata_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.sdrf.txt"
+    reference_raw_data = "$baseDir/data/reference_raw_data"
+
     col_names = "TRUE"
-
-    reference_exp_mat = "$baseDir/data/query_10X/"
-    reference_anno = "$baseDir/data/min_sdrf.txt"
-    cell_id_col = "barcode"
+    cell_id_col = "Comment.ENA_RUN."
+    cluster_col = "Characteristics.cell.type."
+   
     //reference_sce = "$baseDir/data/reference_sce.rds"
-
-    cluster_col = "cell_type1"
     plot_file = "$baseDir/data/output/feature_plot_file.png"
     threshold = 0.7
     //num_chunks = 'NULL'
     //num_clusters = 'NULL'
     //num_nearset_neighbours
 }
-
