solve channel issues

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ profiles {
         executor.exitReadTimeout='100000 sec'
         executor.pollInterval = '5sec'
 
-        conda.cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs" //change this later 
+        //conda.cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs"
         conda.createTimeout = "30 min"
     } 
 }
@@ -30,7 +30,7 @@ params {
 
     query_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_rows"
 
-    query_raw_data = "$baseDir/data/query_raw_data/"
+    query_raw_data = "query_raw_data/"
     //query_sce = "$baseDir/data/projected_sce.rds"
     
 
@@ -42,14 +42,14 @@ params {
     reference_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_rows" 
 
     reference_metadata_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.sdrf.txt"
-    reference_raw_data = "$baseDir/data/reference_raw_data"
+    reference_raw_data = "reference_raw_data/"
 
     col_names = "TRUE"
     cell_id_col = "Comment.ENA_RUN."
     cluster_col = "Characteristics.cell.type."
    
     //reference_sce = "$baseDir/data/reference_sce.rds"
-    plot_file = "$baseDir/data/output/feature_plot_file.png"
+    plot_file = "feature_plot_file.png"
     threshold = 0.7
     //num_chunks = 'NULL'
     //num_clusters = 'NULL'
