add flexible resource allocation

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ profiles {
         executor.exitReadTimeout='100000 sec'
         executor.pollInterval = '5sec'
 
-        //conda.cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs"
+        conda.cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs"
         conda.createTimeout = "30 min"
     } 
 }
@@ -24,29 +24,29 @@ params {
     projection_method = "cell" //must be 'cell' or 'cluster'
 
     // query parameters 
-    query_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx"
+    query_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx"
 
-    query_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_cols"
+    query_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_cols"
 
-    query_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_rows"
+    query_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_rows"
 
     query_raw_data = "query_raw_data/"
     //query_sce = "$baseDir/data/projected_sce.rds"
     
 
     // reference parameters
-    reference_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx"
+    reference_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx"
 
-    reference_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_cols"
+    reference_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_cols"
 
-    reference_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.aggregated_filtered_normalised_counts.mtx_rows" 
+    reference_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_rows" 
 
-    reference_metadata_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-7098/E-MTAB-7098.sdrf.txt"
+    reference_metadata_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.sdrf.txt"
     reference_raw_data = "reference_raw_data/"
 
     col_names = "TRUE"
-    cell_id_col = "Comment.ENA_RUN."
-    cluster_col = "Characteristics.cell.type."
+    cell_id_col = "FactorValue..single.cell.identifier."
+    cluster_col = "Characteristics..inferred.cell.type."
    
     //reference_sce = "$baseDir/data/reference_sce.rds"
     plot_file = "feature_plot_file.png"
