--- a/nextflow.config
+++ b/nextflow.config
@@ -20,37 +20,39 @@ profiles {
 }
 
 params {
-    output_dir = "$baseDir/data/output"
-    projection_method = "cell" //must be 'cell' or 'cluster'
+    results_dir = ""
+    output_dir_cluster = "$baseDir/data/output_cluster"
+    output_dir_cell = "$baseDir/data/output_cell"
+    projection_method = "cluster" //must be 'cell' or 'cluster'
 
     // query parameters 
-    query_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx"
+    query_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx"
 
-    query_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_cols"
+    query_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_cols"
 
-    query_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_rows"
+    query_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_rows"
 
     query_raw_data = "query_raw_data/"
     //query_sce = "$baseDir/data/projected_sce.rds"
     
 
     // reference parameters
-    reference_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx"
+    reference_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx"
 
-    reference_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_cols"
+    reference_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_cols"
 
-    reference_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.aggregated_filtered_normalised_counts.mtx_rows" 
+    reference_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_rows" 
 
-    reference_metadata_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-ENAD-15/E-ENAD-15.sdrf.txt"
+    reference_metadata_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.sdrf.txt"
     reference_raw_data = "reference_raw_data/"
 
     col_names = "TRUE"
-    cell_id_col = "FactorValue..single.cell.identifier."
-    cluster_col = "Characteristics..inferred.cell.type."
+    cell_id_col = "Comment.ENA_RUN."
+    cluster_col = "Factor.Value.cell.type."
    
     //reference_sce = "$baseDir/data/reference_sce.rds"
     plot_file = "feature_plot_file.png"
-    threshold = 0.7
+    threshold = 0.1
     //num_chunks = 'NULL'
     //num_clusters = 'NULL'
     //num_nearset_neighbours
