--- a/nextflow.config
+++ b/nextflow.config
@@ -20,31 +20,15 @@ profiles {
 }
 
 params {
-    results_dir = ""
+    results_dir = "" // specify when in nested workflow 
+    query_10x_dir = "" // supply data downloaded via the outer workflow 
+    reference_10x_dir = ""
+    reference_metadata = ""
+
     output_dir_cluster = "$baseDir/data/output_cluster"
     output_dir_cell = "$baseDir/data/output_cell"
     projection_method = "cluster" //must be 'cell' or 'cluster'
 
-    // query parameters 
-    query_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx"
-
-    query_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_cols"
-
-    query_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_rows"
-
-    query_raw_data = "query_raw_data/"
-    //query_sce = "$baseDir/data/projected_sce.rds"
-    
-
-    // reference parameters
-    reference_matrix_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx"
-
-    reference_barcodes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_cols"
-
-    reference_genes_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.aggregated_filtered_normalised_counts.mtx_rows" 
-
-    reference_metadata_url = "ftp://ftp.ebi.ac.uk/pub/databases/microarray/data/atlas/sc_experiments/E-MTAB-6386/E-MTAB-6386.sdrf.txt"
-    reference_raw_data = "reference_raw_data/"
 
     col_names = "TRUE"
     cell_id_col = "Comment.ENA_RUN."
