--- a/nextflow.config
+++ b/nextflow.config
@@ -20,10 +20,10 @@ profiles {
 }
 
 params {
-    results_dir = ""
-    query_10x_dir = ""
-    reference_10x_dir = ""
-    reference_metadata = ""
+    results_dir = "DUMMY_TEST"
+    query_10x_dir = "DUMMY_TEST"
+    reference_10x_dir = "DUMMY_TEST"
+    reference_metadata = "DUMMY_TEST"
 
     output_dir_cluster = "$baseDir/data/output_cluster"
     output_dir_cell = "$baseDir/data/output_cell"
