--- a/nextflow.config
+++ b/nextflow.config
@@ -25,14 +25,14 @@ params {
     reference_10x_dir = ''
     reference_metadata = ''
 
-    output_dir_cluster = "$baseDir/data/output_cluster"
-    output_dir_cell = "$baseDir/data/output_cell"
-    projection_method = "cluster" //must be 'cell' or 'cluster'
+    output_dir_cluster = ""
+    output_dir_cell = ""
+    projection_method = "" //must be 'cell' or 'cluster'
 
    
-    col_names = "TRUE"
-    cell_id_col = "Comment.ENA_RUN."
-    cluster_col = "Factor.Value.cell.type."
+    col_names = ""
+    cell_id_col = ""
+    cluster_col = ""
    
     //reference_sce = "$baseDir/data/reference_sce.rds"
     plot_file = "feature_plot_file.png"
