--- a/nextflow.config
+++ b/nextflow.config
@@ -14,30 +14,30 @@ profiles {
         executor.exitReadTimeout='100000 sec'
         executor.pollInterval = '5sec'
 
-        conda.cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs" //change this later 
+        conda.cacheDir = "/nfs/production3/ma/home/asolovyev/scmap-workflow/envs"
         conda.createTimeout = "30 min"
     } 
 }
 
 params {
-    
-    output_dir = "$baseDir/data/output"
-    projection_method = "cluster" //must be 'cell' or 'cluster'
+    results_dir = ''
+    query_10x_dir = ''
+    reference_10x_dir = ''
+    reference_metadata = ''
 
-    query_exp_mat = "$baseDir/data/query_10X/"
-    //query_sce = "$baseDir/data/projected_sce.rds"
-    col_names = "TRUE"
+    output_dir_cluster = ""
+    output_dir_cell = ""
+    projection_method = "" //must be 'cell' or 'cluster'
 
-    reference_exp_mat = "$baseDir/data/query_10X/"
-    reference_anno = "$baseDir/data/min_sdrf.txt"
-    cell_id_col = "barcode"
+   
+    col_names = ""
+    cell_id_col = ""
+    cluster_col = ""
+   
     //reference_sce = "$baseDir/data/reference_sce.rds"
-
-    cluster_col = "cell_type1"
-    plot_file = "$baseDir/data/output/feature_plot_file.png"
-    threshold = 0.7
+    plot_file = "feature_plot_file.png"
+    threshold = 0.1
     //num_chunks = 'NULL'
     //num_clusters = 'NULL'
     //num_nearset_neighbours
 }
-
