--- a/envs/scmap.yaml
+++ b/envs/scmap.yaml
@@ -4,6 +4,5 @@ channels:
   - conda-forge 
   - defaults 
 dependencies:
-  - openblas 
-  - scmap-cli=0.0.4
-  
+  - scmap-cli=0.0.5
+  - bioconductor-singlecellexperiment=1.6.0
