--- a/nextflow.config
+++ b/nextflow.config
@@ -18,19 +18,19 @@ profiles {
 }
 
 params {
-    results_dir = ''
-    query_10x_dir = ''
-    reference_10x_dir = ''
-    reference_metadata = ''
+    results_dir = "${baseDir}/outputs"
+    query_10x_dir = "${baseDir}/data/data_10X"
+    reference_10x_dir = "${baseDir}/data/data_10X"
+    reference_metadata = "${baseDir}/data/unmelted_sdrf.tsv"
 
-    output_dir_cluster = ""
-    output_dir_cell = ""
-    projection_method = "" //must be 'cell' or 'cluster'
+    output_dir_cluster = "${baseDir}/outputs"
+    output_dir_cell = "${baseDir}/outputs"
+    projection_method = "cluster" //must be 'cell' or 'cluster'
 
    
-    col_names = ""
-    cell_id_col = ""
-    cluster_col = ""
+    col_names = "TRUE"
+    cell_id_col = "id"
+    cluster_col = "Characteristic.cell.type."
    
     //reference_sce = "$baseDir/data/reference_sce.rds"
     plot_file = "feature_plot_file.png"
